2010-12-14  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/ssh-security.c: Use client_port.

2010-12-14  Daniel Néri <dne@mayonnaise.net>
	* application-src/ampgsql.pl: Don't assume that gtar is configured to
	  use stdin/stdout as default archive.

2010-12-14  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amidxtaped.pl: Don't crash if same-host doesn't match.

2010-12-13  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Interactive.pm: rename finished_cb to request_cb.
	* installcheck/Amanda_Recovery_Scan.pl,
	  perl/Amanda/Interactive/stdin.pm,
	  perl/Amanda/Recovery/Scan.pm, server-src/amcheckdump.pl,
	  server-src/amfetchdump.pl, server-src/amidxtaped.pl,
	  server-src/amvault.pl: s/finished_cb/request_cb/

2010-12-12  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/disk.pm: inventory must return the same as
				       read_label.
	* server-src/amtape.pl: Fix for new inventory.
	* installcheck/Amanda_Changer_disk.pl: Fix for new inventory.
	* installcheck/Amanda_Changer_rait.pl: Fix for new inventory.

2010-12-11  Daniel Néri <dne@mayonnaise.net>
	* application-src/ampgsql.pl: Don't assume that gtar is configured to
	  use stdin/stdout as default archive

2010-12-11  Daniel Néri <dne@mayonnaise.net>
	* application-src/ampgsql.pl: Use diskname, not devicename, as prefix
	  when checking for properties. Now works as documented in the ampgsql
	  man page.

2010-12-10 Dan Locks <dwlocks@zmanda.com>
	*  packaging/deb/control: move gnuplot to Suggests: and swap the order

2010-12-10  David Bogen <bogen@wisc.edu>
	* server-src/amoverview.pl: fix amoverview's argument parsing

2010-12-10  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck-device.pl: Fix possible hang if
	  Amanda::MainLoop::quit is called before Amanda::MainLoop::run.
	* perl/Amanda/Changer.pm: Return the error.

2010-12-09  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Check if taper is flushing something before